@@ -1837,8 +1837,8 @@ WIDGET_DEFAULT = {
         "bkg_color_refill": "#0088FF",
         "font_color_used": "#555555",
         "bkg_color_used": "#FFFFFF",
-        "font_color_delta": "#555555",
-        "bkg_color_delta": "#FFFFFF",
+        "font_color_ratio": "#555555",
+        "bkg_color_ratio": "#FFFFFF",
         "font_color_early": "#DDDDDD",
         "bkg_color_early": "#666666",
         "font_color_laps": "#DDDDDD",
@@ -1865,7 +1865,7 @@ WIDGET_DEFAULT = {
         "decimal_places_remain": 2,
         "decimal_places_refill": 2,
         "decimal_places_used": 2,
-        "decimal_places_delta": 2,
+        "decimal_places_ratio": 3,
         "decimal_places_early": 2,
         "decimal_places_laps": 1,
         "decimal_places_minutes": 1,
@@ -1878,7 +1878,7 @@ WIDGET_DEFAULT = {
         "caption_text_remain": "energy",
         "caption_text_refill": "refill",
         "caption_text_used": "used",
-        "caption_text_delta": "delta",
+        "caption_text_ratio": "ratio",
         "caption_text_early": "early",
         "caption_text_laps": "laps",
         "caption_text_minutes": "mins",
